force-app/main/default/objects/Note__c/Note__c.object-meta.xml
<CustomObject>
    <label>Commentaire</label>
    <nameField>
        <displayFormat>N-{00000000}</displayFormat>
        <label>Note Number</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Commentaires</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>