force-app/main/default/objects/Note__c/fields/NoteDate__c.field-meta.xml
<CustomField>
    <fullName>NoteDate__c</fullName>
    <label>Note Date</label>
    <type>DateTime</type>
</CustomField>