force-app/main/default/objects/Note__c/fields/ServiceNowId__c.field-meta.xml
<CustomField>
    <fullName>ServiceNowId__c</fullName>
    <externalId>true</externalId>
    <label>Service Now Id</label>
    <length>255</length>
    <type>Text</type>
</CustomField>